--- a/restaurant_app_retrofit/build.gradle
+++ b/restaurant_app_retrofit/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.composerestaurantsapps'
+    namespace 'com.example.restaurant_app_retrofit'
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.example.composerestaurantsapps"
+        applicationId "com.example.restaurant_app_retrofit"
         minSdk 25
         targetSdk 35
         versionCode 1
@@ -39,21 +39,22 @@ android {
 dependencies {
 
     implementation libs.androidx.core.ktx
-    implementation libs.androidx.lifecycle.runtime.ktx
-    implementation libs.androidx.activity.compose
-    implementation platform(libs.androidx.compose.bom)
+    implementation libs.androidx.lifecycle.runtime.ktx.v231
+    implementation libs.androidx.activity.compose.v151
+    implementation platform(libs.androidx.compose.bom.v20221000)
     implementation libs.androidx.ui
     implementation libs.androidx.ui.graphics
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
     implementation libs.androidx.compose.material
     testImplementation libs.junit
-    androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
-    androidTestImplementation platform(libs.androidx.compose.bom)
+    androidTestImplementation libs.androidx.junit.v115
+    androidTestImplementation libs.androidx.espresso.core.v351
+    androidTestImplementation platform(libs.androidx.compose.bom.v20221000)
     androidTestImplementation libs.androidx.ui.test.junit4
     debugImplementation libs.androidx.ui.tooling
     debugImplementation libs.androidx.ui.test.manifest
+    implementation libs.androidx.lifecycle.viewmodel.compose.v240rc01
     implementation libs.retrofit
     implementation libs.gson
     implementation libs.converter.gson
