--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ dependencyResolutionManagement {
 rootProject.name = "ComposeRestaurantsApps"
 include ':app'
 include ':restaurantappviewmodel'
+include ':restaurant_app_retrofit'
