--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ coilCompose = "2.4.0"
 compiler = "1.1.1"
 composeBomVersion = "2022.10.00"
 converterGson = "2.11.0"
-converterGsonVersion = "2.9.0"
+converterGsonVersion = "2.8.0"
 coreKtxVersion = "1.8.0"
 espressoCoreVersion = "3.6.1"
 gson = "2.11.0"
@@ -31,9 +31,10 @@ lifecycleViewmodelCompose = "2.8.0"
 lifecycleViewmodelComposeVersion = "2.4.1"
 material = "1.12.0"
 constraintlayout = "2.2.1"
-navigationCompose = "2.9.0"
+navigationCompose = "2.8.0"
+navigationComposeVersion = "2.4.2"
 retrofit = "2.11.0"
-retrofitVersion = "2.9.0"
+retrofitVersion = "2.8.0"
 roomRuntime = "2.7.1"
 roomRuntimeVersion = "2.7.1"
 material3Android = "1.3.2"
@@ -41,7 +42,6 @@ runtime = "1.1.1"
 runtimeLivedata = "1.8.1"
 adsMobileSdk = "0.15.1-alpha01"
 composeMaterial = "1.4.1"
-navigationComposeJvmstubs = "2.9.0"
 
 [libraries]
 androidx-activity-compose-v151 = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
@@ -58,6 +58,7 @@ androidx-lifecycle-viewmodel-compose-v241 = { module = "androidx.lifecycle:lifec
 androidx-lifecycle-viewmodel-compose-v262 = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-lifecycle-viewmodel-compose-v290 = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidxLifecycleViewmodelComposeVersion" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+androidx-navigation-compose-v242 = { module = "androidx.navigation:navigation-compose", version.ref = "navigationComposeVersion" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntimeVersion" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
@@ -98,7 +99,6 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
-androidx-navigation-compose-jvmstubs = { group = "androidx.navigation", name = "navigation-compose-jvmstubs", version.ref = "navigationComposeJvmstubs" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
