--- a/restaurant_app_navigation/build.gradle
+++ b/restaurant_app_navigation/build.gradle
@@ -47,7 +47,6 @@ dependencies {
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
     implementation libs.androidx.compose.material
-    implementation libs.androidx.navigation.compose.jvmstubs
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit.v115
     androidTestImplementation libs.androidx.espresso.core.v351
@@ -59,5 +58,6 @@ dependencies {
     implementation libs.retrofit.v290
     implementation libs.gson.v286
     implementation libs.converter.gson.v290
+    implementation libs.androidx.navigation.compose.v242
 
 }
