--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':restaurantappviewmodel'
 include ':restaurant_app_retrofit'
 include ':restaurant_app_coroutines'
 include ':restaurant_app_navigation'
+include ':restaurant_app_room'
