--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':restaurant_app_retrofit'
 include ':restaurant_app_coroutines'
 include ':restaurant_app_navigation'
 include ':restaurant_app_room'
+include ':restaurant_app_presentation_pattern'
