Начал делать проект с чистой архитектурой

--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,4 @@ include ':restaurant_app_coroutines'
 include ':restaurant_app_navigation'
 include ':restaurant_app_room'
 include ':restaurant_app_presentation_pattern'
+include ':restaurant_app_clean_architecture'
