--- a/restaurant_app_clean_architecture/build.gradle
+++ b/restaurant_app_clean_architecture/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation libs.androidx.ui.graphics
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
+    implementation libs.androidx.compose.material
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit.v115
     androidTestImplementation libs.androidx.espresso.core.v351
