--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':restaurant_app_navigation'
 include ':restaurant_app_room'
 include ':restaurant_app_presentation_pattern'
 include ':restaurant_app_clean_architecture'
+include ':restaurant_app_hilt'
